[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel>=0.45.1", "pytest-runner>=6.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "rune-runtime"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
   "pydantic>=2.10.3",
   "python-dateutil>=2.9.0.post0",
   "tzdata>=2025.2"
]
optional-dependencies.dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.1",
    "types-python-dateutil>=2.9.0.20250809"
]
description = "rune-runtime: the Rune DSL runtime for Python"
readme = "README.md"
keywords = [
    "rune",
    "rune runtime",
]
license = "Apache-2.0"
authors = [
    { name = "Daniel Schwartz" },
    { name = "Plamen Neykov" },
    { name = "Others (See AUTHORS)" }
]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/rune/runtime/version.py"
